oncall-games-kyverno-secure-baseline/assets/bad-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: bad, namespace: app}
spec:
  replicas: 1
  selector: {matchLabels: {app: bad}}
  template:
    metadata: {labels: {app: bad}}
    spec:
      containers:
      - name: c
        image: quay.io/libpod/busybox:latest
        command: ["sleep","3650d"]
